--- a/src/main/resources/cse_213/final_project/Fima/ProfileInformation .fxml
+++ b/src/main/resources/cse_213/final_project/Fima/ProfileInformation .fxml
@@ -23,9 +23,9 @@
       </Label>
       <Label layoutX="291.0" layoutY="125.0" text="Age" />
       <TextField fx:id="AGETEXTFIELD" layoutX="386.0" layoutY="116.0" prefHeight="26.0" prefWidth="175.0" />
-      <Label fx:id="DateofJoiningDATEPICKER" layoutX="292.0" layoutY="77.0" text="Date of Joining" />
-      <DatePicker layoutX="97.0" layoutY="160.0" />
-      <DatePicker layoutX="386.0" layoutY="73.0" />
+      <Label layoutX="292.0" layoutY="77.0" text="Date of Joining" />
+      <DatePicker fx:id="dateofbirthdatepicker" layoutX="97.0" layoutY="160.0" />
+      <DatePicker fx:id="DateofJoiningdatepicker" layoutX="386.0" layoutY="73.0" />
       <Label layoutX="293.0" layoutY="164.0" text="Gender" />
       <Label layoutX="20.0" layoutY="112.0" text="ID" />
       <RadioButton fx:id="MALERADIOBUTTON" layoutX="385.0" layoutY="164.0" mnemonicParsing="false" text="Male" />
