--- a/src/main/resources/cse_213/final_project/Mehrab/Emergency Officer/Traffic Incident Log.fxml
+++ b/src/main/resources/cse_213/final_project/Mehrab/Emergency Officer/Traffic Incident Log.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="697.0" prefWidth="823.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/23.0.1" fx:controller="cse_213.final_project.Mehrab.TrafficIncidentLogController">
+<AnchorPane prefHeight="697.0" prefWidth="823.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cse_213.final_project.Mehrab.TrafficIncidentLogController">
 
     <Label layoutX="350.0" layoutY="21.0" text="Traffic Incident Log" />
 
@@ -33,7 +33,7 @@
     <Label layoutX="480.0" layoutY="292.0" text="Incident Status" />
     <ComboBox fx:id="incidentStatusComboBox" layoutX="600.0" layoutY="292.0" prefWidth="200" />
 
-    <Button fx:id="logIncidentButton" layoutX="350.0" layoutY="393.0" prefWidth="120" text="Log Incident" />
+    <Button fx:id="logIncidentButton" layoutX="350.0" layoutY="393.0" onAction="#logIncidentButtonOA" prefWidth="120" text="Log Incident" />
 
     <Label layoutX="140.0" layoutY="418.0" text="Incident Data" />
     <TextArea fx:id="incidentDataArea" editable="false" layoutX="140.0" layoutY="438.0" prefHeight="100" prefWidth="540" wrapText="true" />
