--- a/src/main/resources/cse_213/final_project/Tawhid/TrafficControlOfficer/G_6_LaneManage.fxml
+++ b/src/main/resources/cse_213/final_project/Tawhid/TrafficControlOfficer/G_6_LaneManage.fxml
@@ -2,24 +2,15 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <AnchorPane prefHeight="400.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cse_213.final_project.Tawhid.Controllers.G_6_LaneManageController">
    <children>
-      <ComboBox fx:id="VehicleTypeCB" layoutX="94.0" layoutY="60.0" prefWidth="150.0" />
-      <Label layoutX="14.0" layoutY="64.0" text="Vehicle Type:" />
-      <RadioButton layoutX="94.0" layoutY="108.0" mnemonicParsing="false" onAction="#Lane_oneOA" text="Lane 1" />
-      <RadioButton layoutX="153.0" layoutY="108.0" mnemonicParsing="false" onAction="#Lane_twoOA" text="Lane 2" />
-      <RadioButton layoutX="212.0" layoutY="108.0" mnemonicParsing="false" onAction="#Lane_ThreeOA" text="Lane 3" />
-      <RadioButton layoutX="271.0" layoutY="108.0" mnemonicParsing="false" onAction="#Lane_FourOA" text="Lane 4" />
-      <RadioButton layoutX="330.0" layoutY="108.0" mnemonicParsing="false" onAction="#Lane_FiveOA" text="Lane 5" />
-      <RadioButton layoutX="389.0" layoutY="108.0" mnemonicParsing="false" onAction="#Lane_SixOA" text="Lane 6" />
-      <Label layoutX="14.0" layoutY="108.0" text="Select Lane:" />
-      <TableView fx:id="alortedTV" layoutX="22.0" layoutY="176.0" prefHeight="137.0" prefWidth="459.0">
+      <TableView fx:id="alortedTV" layoutX="22.0" layoutY="209.0" prefHeight="137.0" prefWidth="459.0">
         <columns>
           <TableColumn fx:id="LaneoneCOL" prefWidth="75.99999809265137" text="Lane 1" />
           <TableColumn fx:id="LanetwoCOL" prefWidth="58.39997100830078" text="Lane 2" />
@@ -29,7 +20,23 @@
             <TableColumn fx:id="laneSixCOL" prefWidth="79.20001220703125" text="Lane 6" />
         </columns>
       </TableView>
-      <Button layoutX="226.0" layoutY="135.0" mnemonicParsing="false" onAction="#AllowRouteOA" prefHeight="26.0" prefWidth="94.0" style="-fx-background-color: #1877F2;" text="Allow route" textFill="WHITE" />
-      <Button layoutX="330.0" layoutY="331.0" mnemonicParsing="false" onAction="#notifyOwnerOA" prefHeight="26.0" prefWidth="144.0" style="-fx-background-color: #1877F2;" text="Notify Vehicle Owner's" textFill="WHITE" />
+      <Button layoutX="226.0" layoutY="168.0" mnemonicParsing="false" onAction="#AllowRouteOA" prefHeight="26.0" prefWidth="94.0" style="-fx-background-color: #1877F2;" text="Allow route" textFill="WHITE" />
+      <Button layoutX="355.0" layoutY="364.0" mnemonicParsing="false" onAction="#SaveOA" prefHeight="26.0" prefWidth="119.0" style="-fx-background-color: #1877F2;" text="Save" textFill="WHITE" />
+      <ComboBox fx:id="Lane1CB" layoutX="110.0" layoutY="73.0" prefHeight="26.0" prefWidth="79.0" promptText="Lane 1" />
+      <ComboBox fx:id="Lane2CB" layoutX="196.0" layoutY="73.0" prefHeight="26.0" prefWidth="79.0" promptText="Lane 2" />
+      <ComboBox fx:id="Lane3CB" layoutX="282.0" layoutY="73.0" prefHeight="26.0" prefWidth="79.0" promptText="Lane 3" />
+      <ComboBox fx:id="Lane4CB" layoutX="110.0" layoutY="110.0" prefHeight="26.0" prefWidth="79.0" promptText="Lane 4" />
+      <ComboBox fx:id="Lane5CB" layoutX="196.0" layoutY="110.0" prefHeight="26.0" prefWidth="79.0" promptText="Lane 5" />
+      <ComboBox fx:id="Lane6CB" layoutX="282.0" layoutY="110.0" prefHeight="26.0" prefWidth="79.0" promptText="Lane 6" />
+      <Text layoutX="22.0" layoutY="91.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Select Lane:">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Text>
+      <Text layoutX="214.0" layoutY="36.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Manage Lane">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </Text>
    </children>
 </AnchorPane>
