--- a/src/main/resources/cse_213/final_project/Tawhid/TrafficControlOfficer/G_8_VIPmovement.fxml
+++ b/src/main/resources/cse_213/final_project/Tawhid/TrafficControlOfficer/G_8_VIPmovement.fxml
@@ -1,32 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckBox?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="400.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cse_213.final_project.Tawhid.Controllers.G_8_VIPmovementController">
    <children>
-      <Button layoutX="44.0" layoutY="241.0" mnemonicParsing="false" onAction="#closeLaneOA" prefHeight="26.0" prefWidth="155.0" style="-fx-background-color: #1877F2;" text="CLose Lane" textFill="WHITE" />
-      <Button layoutX="256.0" layoutY="241.0" mnemonicParsing="false" onAction="#OpenLaneOA" prefHeight="26.0" prefWidth="155.0" style="-fx-background-color: #1877F2;" text="Open Lane" textFill="WHITE" />
-      <CheckBox layoutX="93.0" layoutY="191.0" mnemonicParsing="false" onAction="#lane_1OA" text="Lane 1" />
-      <CheckBox layoutX="156.0" layoutY="191.0" mnemonicParsing="false" onAction="#lane_2OA" text="Lane 2" />
-      <CheckBox layoutX="219.0" layoutY="191.0" mnemonicParsing="false" onAction="#lane_3OA" text="Lane 3" />
-      <CheckBox layoutX="283.0" layoutY="191.0" mnemonicParsing="false" onAction="#lane_4OA" text="Lane 4" />
-      <CheckBox layoutX="348.0" layoutY="191.0" mnemonicParsing="false" onAction="#lane_5OA" text="Lane 5" />
-      <CheckBox layoutX="412.0" layoutY="191.0" mnemonicParsing="false" onAction="#lane_6OA" text="Lane 6" />
-      <Label layoutX="14.0" layoutY="191.0" text="Select Lane:" />
-      <TextField fx:id="VIP_EmergencyTF" layoutX="118.0" layoutY="155.0" prefHeight="26.0" prefWidth="198.0" promptText="VIP- Dhaka Metro XX-XXXX" style="-fx-border-color: #1877F2;" />
-      <Label layoutX="14.0" layoutY="159.0" text="Registration No:" />
-      <ComboBox fx:id="vehicleTypeCB" layoutX="120.0" layoutY="117.0" prefHeight="26.0" prefWidth="198.0" promptText="Vehicle Type" />
-      <Label layoutX="14.0" layoutY="121.0" text="Vehicle Type:" />
+      <Button layoutX="277.0" layoutY="139.0" mnemonicParsing="false" onAction="#closeLaneOA" prefHeight="26.0" prefWidth="155.0" style="-fx-background-color: #1877F2;" text="CLose Lane" textFill="WHITE" />
+      <Button layoutX="277.0" layoutY="104.0" mnemonicParsing="false" onAction="#OpenLaneOA" prefHeight="26.0" prefWidth="155.0" style="-fx-background-color: #1877F2;" text="Open Lane" textFill="WHITE" />
       <Label layoutX="113.0" layoutY="24.0" text="Manage VIP and Emergency ">
          <font>
             <Font name="System Bold" size="20.0" />
          </font>
       </Label>
+      <Label layoutX="151.0" layoutY="109.0" text="Open Emergency lane:" />
+      <Label layoutX="151.0" layoutY="143.0" text="Close Emergency lane:" />
    </children>
 </AnchorPane>
