--- a/src/main/resources/cse_213/final_project/Fima/LiaisonOfficer/Incident_Reports_plazaL6.fxml
+++ b/src/main/resources/cse_213/final_project/Fima/LiaisonOfficer/Incident_Reports_plazaL6.fxml
@@ -19,10 +19,10 @@
             <Font name="System Bold" size="22.0" />
          </font>
       </Label>
-      <Label fx:id="ReportTimetextfield" layoutX="22.0" layoutY="83.0" text="Report Time" />
+      <Label layoutX="22.0" layoutY="83.0" text="Report Time" />
       <Label layoutX="23.0" layoutY="126.0" text="Report Date" />
       <Label layoutX="23.0" layoutY="169.0" text="Booth  Number" />
-      <TextField layoutX="114.0" layoutY="79.0" prefHeight="26.0" prefWidth="158.0" />
+      <TextField fx:id="reporttimetextfield" layoutX="114.0" layoutY="79.0" prefHeight="26.0" prefWidth="158.0" />
       <Label layoutX="23.0" layoutY="220.0" text="Incident Details" />
       <TextArea fx:id="IncidentDetailstextarea" layoutX="23.0" layoutY="247.0" prefHeight="163.0" prefWidth="250.0" />
       <TableView fx:id="showdatatableview" layoutX="319.0" layoutY="169.0" prefHeight="200.0" prefWidth="407.0">
@@ -38,6 +38,6 @@
       <Button layoutX="179.0" layoutY="424.0" mnemonicParsing="false" onAction="#Submitonactionbutton" prefHeight="26.0" prefWidth="90.0" text="Submit" />
       <ComboBox fx:id="BoothNumbercombobox" layoutX="114.0" layoutY="165.0" prefHeight="26.0" prefWidth="158.0" />
       <DatePicker fx:id="ReportDatedatepicker" layoutX="115.0" layoutY="122.0" prefHeight="26.0" prefWidth="157.0" />
-      <Button layoutX="630.0" layoutY="412.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="64.0" text="Home" />
+      <Button layoutX="630.0" layoutY="412.0" mnemonicParsing="false" onAction="#homeonactionbutton" prefHeight="26.0" prefWidth="64.0" text="Home" />
    </children>
 </AnchorPane>
