--- a/src/main/resources/cse_213/final_project/Tawhid/PoliceAuthurity/Dashboard_PA.fxml
+++ b/src/main/resources/cse_213/final_project/Tawhid/PoliceAuthurity/Dashboard_PA.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cse_213.final_project.Tawhid.Controllers.Dashboard_PA">
    <left>
       <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
@@ -20,7 +20,7 @@
                   <Button layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#SecurityThreadOA" prefHeight="26.0" prefWidth="176.0" text="Handle Security Threads" />
                   <Button layoutX="10.0" layoutY="36.0" mnemonicParsing="false" onAction="#CheckVehicleOA" prefHeight="26.0" prefWidth="176.0" text="Check Vehicles" />
                   <Button layoutX="10.0" layoutY="63.0" mnemonicParsing="false" onAction="#resolveDepositeOA" prefHeight="26.0" prefWidth="176.0" text="Resolve Deposite" />
-                  <Button layoutX="10.0" layoutY="89.0" mnemonicParsing="false" onAction="#newRequestOA" prefHeight="26.0" prefWidth="176.0" text="New Escort Request" />
+                  <Button layoutX="10.0" layoutY="89.0" mnemonicParsing="false" onAction="#newRequestOA" prefHeight="26.0" prefWidth="176.0" text="View Unpaid toll Status" />
                   <Button layoutX="10.0" layoutY="116.0" mnemonicParsing="false" onAction="#violationEntryOA" prefHeight="26.0" prefWidth="176.0" text="Violation Entry" />
                   <Button layoutX="10.0" layoutY="142.0" mnemonicParsing="false" onAction="#reportAccidentOA" prefHeight="26.0" prefWidth="176.0" text="Report Accident" />
                   <Button layoutX="10.0" layoutY="168.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="176.0" text="Inquiry" />
