--- a/src/main/resources/cse_213/final_project/Tawhid/PoliceAuthurity/G_5_EnforceTrafficLaw.fxml
+++ b/src/main/resources/cse_213/final_project/Tawhid/PoliceAuthurity/G_5_EnforceTrafficLaw.fxml
@@ -1,14 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="cse_213.final_project.Tawhid.PoliceAuthurity.G5EnforceTrafficLaw"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane prefHeight="400.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cse_213.final_project.Tawhid.Controllers.G5EnforceTrafficLaw">
+   <children>
+      <TableView layoutX="33.0" layoutY="100.0" prefHeight="124.0" prefWidth="432.0">
+        <columns>
+          <TableColumn prefWidth="136.80005645751953" text="Reg No" />
+          <TableColumn prefWidth="111.199951171875" text="Licence No" />
+            <TableColumn prefWidth="88.79998779296875" text="Toll Status" />
+            <TableColumn prefWidth="83.20001220703125" text="Fine Status" />
+        </columns>
+      </TableView>
+      <Label layoutX="167.0" layoutY="14.0" text="Enforce Traffic Law">
+         <font>
+            <Font name="System Bold" size="20.0" />
+         </font>
+      </Label>
+      <TextField layoutX="33.0" layoutY="60.0" />
+      <Button layoutX="189.0" layoutY="60.0" mnemonicParsing="false" text="Search" />
+      <Label layoutX="33.0" layoutY="271.0" text="Total Amount:" />
+      <Label fx:id="totalAmountTextlabel" layoutX="114.0" layoutY="270.0" prefHeight="18.0" prefWidth="150.0" />
+      <Button layoutX="62.0" layoutY="302.0" mnemonicParsing="false" onAction="#collectAmountOA" text="Collect Amount" />
+      <Button layoutX="166.0" layoutY="302.0" mnemonicParsing="false" onAction="#impoundVehicleOA" text="Impound vehicle" />
+   </children>
 </AnchorPane>
