--- a/src/main/resources/cse_213/final_project/Tawhid/TrafficControlOfficer/G_2_updateViolationRecord.fxml
+++ b/src/main/resources/cse_213/final_project/Tawhid/TrafficControlOfficer/G_2_updateViolationRecord.fxml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
@@ -14,6 +14,8 @@
       <Label layoutX="121.0" layoutY="124.0" text="Type:" />
       <Label layoutX="121.0" layoutY="160.0" text="Registration No:" />
       <Label layoutX="121.0" layoutY="218.0" text="Update Date:" />
+      <CheckBox layoutX="223.0" layoutY="189.0" mnemonicParsing="false" text="Paid Fine" />
+      <CheckBox layoutX="315.0" layoutY="189.0" mnemonicParsing="false" text="Unpaid Fine" />
       <DatePicker fx:id="DateOfUpdateDP" layoutX="220.0" layoutY="213.0" promptText="Date of Update" style="-fx-border-color: #1877F2;" />
       <TextField fx:id="registrationNoTF" layoutX="220.0" layoutY="156.0" prefHeight="26.0" prefWidth="175.0" promptText="Dhaka metro XX-XXXX" style="-fx-border-color: #1877F2;" />
       <ComboBox fx:id="vehicleTypeCB" layoutX="220.0" layoutY="120.0" prefHeight="26.0" prefWidth="175.0" promptText="Vehicle Type" style="-fx-border-color: #1877F2;" />
@@ -35,7 +37,5 @@
          </font>
       </Button>
       <Label layoutX="121.0" layoutY="189.0" text="Status:" />
-      <RadioButton layoutX="220.0" layoutY="189.0" mnemonicParsing="false" text="Paid" />
-      <RadioButton layoutX="279.0" layoutY="191.0" mnemonicParsing="false" text="Unpaid" />
    </children>
 </AnchorPane>
