--- a/src/main/resources/cse_213/final_project/Fima/VehicleInformation.fxml
+++ b/src/main/resources/cse_213/final_project/Fima/VehicleInformation.fxml
@@ -9,25 +9,34 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-
-<AnchorPane prefHeight="503.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cse_213.final_project.Fima.Controllers.VehicleInformation">
+<AnchorPane prefHeight="445.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cse_213.final_project.Fima.Controllers.VehicleInformation">
    <children>
-      <ComboBox fx:id="VehicleTypecombobox" layoutX="22.0" layoutY="28.0" prefWidth="150.0" promptText="Vehicle Type" />
-      <ComboBox layoutX="191.0" layoutY="28.0" prefWidth="150.0" />
-      <TextField fx:id="ownernametextfield" layoutX="372.0" layoutY="28.0" promptText="Owner Name" />
-      <DatePicker fx:id="datedatepicker" layoutX="24.0" layoutY="104.0" promptText="Date" />
-      <Label fx:id="Regestrationlable" layoutX="245.0" layoutY="108.0" text="Regestration" />
-      <RadioButton fx:id="Yesradiobutton" layoutX="321.0" layoutY="108.0" mnemonicParsing="false" text="Yes" />
-      <RadioButton fx:id="noradiobutton" layoutX="392.0" layoutY="108.0" mnemonicParsing="false" text="No" />
-      <Button layoutX="496.0" layoutY="143.0" mnemonicParsing="false" onAction="#backOnActionButton" text="Back" />
-      <Button layoutX="392.0" layoutY="143.0" mnemonicParsing="false" onAction="#saveOnActionButton" text="Save" />
-      <TableView fx:id="tableview" layoutX="22.0" layoutY="199.0" prefHeight="200.0" prefWidth="462.0">
+      <ComboBox fx:id="VehicleTypecombobox" layoutX="26.0" layoutY="73.0" prefWidth="150.0" promptText="Vehicle Type" />
+      <ComboBox fx:id="VehicleTollcombobox" layoutX="208.0" layoutY="128.0" prefWidth="150.0" promptText="Vehicle Toll" />
+      <TextField fx:id="ownernametextfield" layoutX="209.0" layoutY="73.0" promptText="Owner Name" />
+      <DatePicker fx:id="datedatepicker" layoutX="26.0" layoutY="119.0" prefHeight="26.0" prefWidth="150.0" promptText="Date" />
+      <Label fx:id="Regestrationlable" layoutX="377.0" layoutY="132.0" text="Regestration" />
+      <RadioButton fx:id="Yesradiobutton" layoutX="533.0" layoutY="132.0" mnemonicParsing="false" text="Yes" />
+      <RadioButton fx:id="noradiobutton" layoutX="471.0" layoutY="132.0" mnemonicParsing="false" text="No" />
+      <Button layoutX="471.0" layoutY="411.0" mnemonicParsing="false" onAction="#backOnActionButton" prefHeight="26.0" prefWidth="101.0" text="Back" />
+      <Button layoutX="198.0" layoutY="384.0" mnemonicParsing="false" onAction="#saveOnActionButton" prefHeight="26.0" prefWidth="132.0" text="Save" />
+      <TableView fx:id="tableview" layoutX="14.0" layoutY="223.0" prefHeight="146.0" prefWidth="574.0">
         <columns>
-          <TableColumn prefWidth="75.0" text="C1" />
-          <TableColumn prefWidth="75.0" text="C2" />
+          <TableColumn fx:id="VehicleTypetablecolumn" prefWidth="113.60003662109375" text="Vehicle Type" />
+          <TableColumn fx:id="OwnerNametablecolumn" prefWidth="104.79998779296875" text="Owner Name" />
+            <TableColumn fx:id="Datetablecolumn" prefWidth="84.0" text="Date" />
+            <TableColumn fx:id="RegNumtablecolumn" prefWidth="83.99993896484375" text="Reg Num" />
+            <TableColumn fx:id="Regestrationtablecolumn" prefWidth="91.20001220703125" text="Regestration" />
+            <TableColumn fx:id="VehicleTolltablecolumn" prefWidth="103.20001220703125" text="Vehicle Toll" />
         </columns>
       </TableView>
-      <TextField fx:id="regnumtextfield" layoutX="23.0" layoutY="156.0" promptText="Reg Num" />
+      <TextField fx:id="regnumtextfield" layoutX="26.0" layoutY="165.0" promptText="Reg Num" />
+      <Label layoutX="208.0" layoutY="21.0" text="Vehicle Information">
+         <font>
+            <Font name="System Bold" size="18.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
