--- a/src/main/resources/cse_213/final_project/login.fxml
+++ b/src/main/resources/cse_213/final_project/login.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
@@ -15,11 +16,11 @@
             <Font name="Georgia" size="25.0" />
          </font>
       </Label>
-      <Label id="dropshadow(gaussian, rgba(0, 0, 0, 0.5), 15, 0.0, 5, 5)" layoutX="178.0" layoutY="153.0" text="User ID:" />
-      <Label id="dropshadow(gaussian, rgba(0, 0, 0, 0.5), 15, 0.0, 5, 5)" layoutX="177.0" layoutY="186.0" text="Password:" />
-      <TextField fx:id="userIDtf" layoutX="234.0" layoutY="149.0" promptText="User ID" />
-      <PasswordField fx:id="passwordTF" layoutX="234.0" layoutY="182.0" promptText="Password" />
-      <Button layoutX="292.0" layoutY="216.0" mnemonicParsing="false" onAction="#loginOA" prefHeight="26.0" prefWidth="92.0" text="Log In" />
+      <Label id="dropshadow(gaussian, rgba(0, 0, 0, 0.5), 15, 0.0, 5, 5)" layoutX="138.0" layoutY="182.0" text="User ID:" />
+      <Label id="dropshadow(gaussian, rgba(0, 0, 0, 0.5), 15, 0.0, 5, 5)" layoutX="137.0" layoutY="215.0" text="Password:" />
+      <TextField fx:id="userIDtf" layoutX="234.0" layoutY="178.0" promptText="User ID" />
+      <PasswordField fx:id="passwordTF" layoutX="234.0" layoutY="211.0" promptText="Password" />
+      <Button layoutX="292.0" layoutY="245.0" mnemonicParsing="false" onAction="#loginOA" prefHeight="26.0" prefWidth="92.0" text="Log In" />
       <Label fx:id="errormassageLabel" layoutX="409.0" layoutY="150.0" prefHeight="56.0" prefWidth="191.0" textAlignment="CENTER" textFill="RED" wrapText="true" />
       <Label prefHeight="73.0" prefWidth="623.0" style="-fx-background-color: #1877F2;" />
       <Text fill="WHITE" layoutX="124.0" layoutY="44.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="dropshadow(gaussian, rgba(0, 0, 0, 0.5), 15, 0.0, 5, 5)" text="Padma Bridge Toll Management System" textAlignment="CENTER">
@@ -37,5 +38,7 @@
             <Font size="14.0" />
          </font>
       </Button>
+      <Label layoutX="137.0" layoutY="150.0" text="Select User type:" />
+      <ComboBox fx:id="UsertypeCB" layoutX="233.0" layoutY="146.0" prefWidth="150.0" />
    </children>
 </AnchorPane>
