--- a/src/main/resources/cse_213/final_project/Tawhid/TrafficControlOfficer/G_1_UnpaidTollVehicle.fxml
+++ b/src/main/resources/cse_213/final_project/Tawhid/TrafficControlOfficer/G_1_UnpaidTollVehicle.fxml
@@ -18,12 +18,13 @@
       <Label layoutX="7.0" layoutY="186.0" text="Date:" />
       <Label layoutX="7.0" layoutY="221.0" text="Toll amount:" />
       <TextField fx:id="tollAmountTF" layoutX="131.0" layoutY="217.0" prefHeight="26.0" prefWidth="170.0" promptText="XX.XX Taka" style="-fx-border-color: #1877F2;" />
-      <Button layoutX="132.0" layoutY="251.0" mnemonicParsing="false" onAction="#registerOA" style="-fx-background-color: #1877F2;" text="Register Unpaid Toll Vehicles" textFill="WHITE" />
+      <Button fx:id="regestrationbutton" layoutX="132.0" layoutY="251.0" mnemonicParsing="false" onAction="#registerOA" style="-fx-background-color: #1877F2;" text="Register Unpaid Toll Vehicles" textFill="WHITE" />
       <Label layoutX="150.0" layoutY="50.0" text="Unpaid toll Vehicle Info">
          <font>
             <Font name="System Bold Italic" size="18.0" />
          </font>
       </Label>
       <Label fx:id="massagelabe" layoutX="310.0" layoutY="154.0" prefHeight="82.0" prefWidth="185.0" textAlignment="CENTER" textFill="RED" wrapText="true" />
+      <Button layoutX="9.0" layoutY="14.0" mnemonicParsing="false" onAction="#backOA" text="Back" />
    </children>
 </AnchorPane>
