--- a/src/main/resources/cse_213/final_project/Tawhid/TrafficControlOfficer/G_2_updateViolationRecord.fxml
+++ b/src/main/resources/cse_213/final_project/Tawhid/TrafficControlOfficer/G_2_updateViolationRecord.fxml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
@@ -13,15 +14,13 @@
    <children>
       <Label layoutX="121.0" layoutY="124.0" text="Type:" />
       <Label layoutX="121.0" layoutY="160.0" text="Registration No:" />
-      <Label layoutX="121.0" layoutY="218.0" text="Update Date:" />
-      <CheckBox layoutX="223.0" layoutY="189.0" mnemonicParsing="false" text="Paid Fine" />
-      <CheckBox layoutX="315.0" layoutY="189.0" mnemonicParsing="false" text="Unpaid Fine" />
-      <DatePicker fx:id="DateOfUpdateDP" layoutX="220.0" layoutY="213.0" promptText="Date of Update" style="-fx-border-color: #1877F2;" />
+      <Label layoutX="121.0" layoutY="218.0" text="Due Date:" />
+      <DatePicker fx:id="DateOfUpdateDP" layoutX="220.0" layoutY="213.0" promptText="Due Date" style="-fx-border-color: #1877F2;" />
       <TextField fx:id="registrationNoTF" layoutX="220.0" layoutY="156.0" prefHeight="26.0" prefWidth="175.0" promptText="Dhaka metro XX-XXXX" style="-fx-border-color: #1877F2;" />
       <ComboBox fx:id="vehicleTypeCB" layoutX="220.0" layoutY="120.0" prefHeight="26.0" prefWidth="175.0" promptText="Vehicle Type" style="-fx-border-color: #1877F2;" />
       <TextField fx:id="TotalAmountTF" layoutX="220.0" layoutY="249.0" prefHeight="26.0" prefWidth="175.0" promptText="Total amount" style="-fx-border-color: #1877F2;" />
       <Label layoutX="120.0" layoutY="254.0" text="Amount of Taka:" />
-      <Button layoutX="315.0" layoutY="285.0" mnemonicParsing="false" onAction="#paidFineListOA" prefHeight="26.0" prefWidth="110.0" style="-fx-background-color: #1877F2;" text="Paid Fine List" textFill="#eaeaea">
+      <Button layoutX="315.0" layoutY="285.0" mnemonicParsing="false" onAction="#paidFineListOA" prefHeight="26.0" prefWidth="163.0" style="-fx-background-color: #1877F2;" text="Update fine list" textFill="#eaeaea">
          <font>
             <Font name="System Bold" size="12.0" />
          </font></Button>
@@ -31,11 +30,17 @@
          </font>
       </Label>
       <Label layoutX="152.0" layoutY="324.0" prefHeight="26.0" prefWidth="282.0" textAlignment="CENTER" textFill="RED" wrapText="true" />
-      <Button layoutX="191.0" layoutY="285.0" mnemonicParsing="false" onAction="#unpaidFineListOA" prefHeight="26.0" prefWidth="110.0" style="-fx-background-color: #1877F2;" text="Unpaid Fine List" textFill="#eaeaea">
+      <Button layoutX="138.0" layoutY="285.0" mnemonicParsing="false" onAction="#unpaidFineListOA" prefHeight="26.0" prefWidth="163.0" style="-fx-background-color: #1877F2;" text="Update Unpaid Fine List" textFill="#eaeaea">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
       </Button>
       <Label layoutX="121.0" layoutY="189.0" text="Status:" />
+      <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#backOA" text="Back" />
+      <RadioButton fx:id="paidRadioButton" layoutX="220.0" layoutY="189.0" mnemonicParsing="false" text="Paid">
+         <toggleGroup>
+            <ToggleGroup fx:id="paid" />
+         </toggleGroup></RadioButton>
+      <RadioButton fx:id="unpaidRadioButton" layoutX="279.0" layoutY="189.0" mnemonicParsing="false" text="Unpaid" toggleGroup="$paid" />
    </children>
 </AnchorPane>
