--- a/src/main/resources/cse_213/final_project/Tawhid/TrafficControlOfficer/G_5.1_emergencyVehicleDetail.fxml
+++ b/src/main/resources/cse_213/final_project/Tawhid/TrafficControlOfficer/G_5.1_emergencyVehicleDetail.fxml
@@ -34,5 +34,6 @@
       <Button layoutX="240.0" layoutY="315.0" mnemonicParsing="false" onAction="#notifyVehicleOA" prefHeight="26.0" prefWidth="138.0" text="Notify Vehicle Owner" />
       <Label layoutX="53.0" layoutY="264.0" text="Reason:" />
       <Label fx:id="rasonlabel" layoutX="162.0" layoutY="264.0" prefHeight="18.0" prefWidth="264.0" />
+      <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#backOA" text="Back" />
    </children>
 </AnchorPane>
