--- a/src/main/resources/cse_213/final_project/Tawhid/TrafficControlOfficer/G_5_emergancymode.fxml
+++ b/src/main/resources/cse_213/final_project/Tawhid/TrafficControlOfficer/G_5_emergancymode.fxml
@@ -21,5 +21,6 @@
       <TextField layoutX="108.0" layoutY="175.0" />
       <Label layoutX="14.0" layoutY="179.0" text="Registration No:" />
       <Button layoutX="132.0" layoutY="215.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="125.0" style="-fx-background-color: #1877F2;" text="Notify Progress" textFill="WHITE" />
+      <Button layoutX="5.0" layoutY="20.0" mnemonicParsing="false" onAction="#backOA" text="Back" />
    </children>
 </AnchorPane>
