--- a/src/main/resources/cse_213/final_project/Tawhid/TrafficControlOfficer/G_6_LaneManage.fxml
+++ b/src/main/resources/cse_213/final_project/Tawhid/TrafficControlOfficer/G_6_LaneManage.fxml
@@ -38,5 +38,6 @@
             <Font size="20.0" />
          </font>
       </Text>
+      <Button layoutX="22.0" layoutY="15.0" mnemonicParsing="false" onAction="#backOA" text="Back" />
    </children>
 </AnchorPane>
