--- a/src/main/resources/cse_213/final_project/Tawhid/TrafficControlOfficer/G_7_flagVehicle.fxml
+++ b/src/main/resources/cse_213/final_project/Tawhid/TrafficControlOfficer/G_7_flagVehicle.fxml
@@ -10,25 +10,26 @@
 
 <AnchorPane prefHeight="400.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cse_213.final_project.Tawhid.Controllers.G_7_FlagVehicle">
    <children>
-      <Label layoutX="15.0" layoutY="99.0" text="Reg No:" />
-      <Label layoutX="14.0" layoutY="213.0" text="Name:" />
-      <Label layoutX="215.0" layoutY="213.0" text="Licence No:" />
-      <Label fx:id="nameTextLabel" layoutX="57.0" layoutY="213.0" prefHeight="18.0" prefWidth="154.0" />
-      <Label fx:id="licenceNoTextLabel" layoutX="277.0" layoutY="213.0" prefHeight="18.0" prefWidth="218.0" />
-      <TextField fx:id="regNOTF" layoutX="114.0" layoutY="95.0" prefHeight="26.0" prefWidth="202.0" promptText="Dhaka- Metro XX-XXXX" />
-      <Button layoutX="388.0" layoutY="167.0" mnemonicParsing="false" onAction="#ShowinfoOA" prefHeight="26.0" prefWidth="91.0" text="Show Info" />
-      <CheckBox layoutX="115.0" layoutY="135.0" mnemonicParsing="false" onAction="#StolenCarOA" prefHeight="18.0" prefWidth="79.0" text="Stolen Car" />
-      <CheckBox layoutX="221.0" layoutY="135.0" mnemonicParsing="false" onAction="#overSpeedingOA" prefHeight="18.0" prefWidth="107.0" text="Over Speeding" />
-      <CheckBox layoutX="115.0" layoutY="161.0" mnemonicParsing="false" onAction="#illigalparkingOA" prefHeight="18.0" prefWidth="98.0" text="Illigal Parking" />
-      <CheckBox layoutX="221.0" layoutY="161.0" mnemonicParsing="false" onAction="#LicenceExpOA" prefHeight="18.0" prefWidth="107.0" text="Licence Expired" />
-      <Button layoutX="204.0" layoutY="275.0" mnemonicParsing="false" onAction="#flagCarOA" prefHeight="26.0" prefWidth="91.0" text="Flag Car" />
+      <Label layoutX="15.0" layoutY="153.0" text="Reg No:" />
+      <Label layoutX="14.0" layoutY="267.0" text="Name:" />
+      <Label layoutX="215.0" layoutY="267.0" text="Licence No:" />
+      <Label fx:id="nameTextLabel" layoutX="57.0" layoutY="267.0" prefHeight="18.0" prefWidth="154.0" />
+      <Label fx:id="licenceNoTextLabel" layoutX="277.0" layoutY="267.0" prefHeight="18.0" prefWidth="218.0" />
+      <TextField fx:id="regNOTF" layoutX="114.0" layoutY="149.0" prefHeight="26.0" prefWidth="202.0" promptText="Dhaka- Metro XX-XXXX" />
+      <Button layoutX="388.0" layoutY="221.0" mnemonicParsing="false" onAction="#ShowinfoOA" prefHeight="26.0" prefWidth="91.0" text="Show Info" />
+      <CheckBox layoutX="115.0" layoutY="189.0" mnemonicParsing="false" onAction="#StolenCarOA" prefHeight="18.0" prefWidth="79.0" text="Stolen Car" />
+      <CheckBox layoutX="221.0" layoutY="189.0" mnemonicParsing="false" onAction="#overSpeedingOA" prefHeight="18.0" prefWidth="107.0" text="Over Speeding" />
+      <CheckBox layoutX="115.0" layoutY="215.0" mnemonicParsing="false" onAction="#illigalparkingOA" prefHeight="18.0" prefWidth="98.0" text="Illigal Parking" />
+      <CheckBox layoutX="221.0" layoutY="215.0" mnemonicParsing="false" onAction="#LicenceExpOA" prefHeight="18.0" prefWidth="107.0" text="Licence Expired" />
+      <Button layoutX="204.0" layoutY="329.0" mnemonicParsing="false" onAction="#flagCarOA" prefHeight="26.0" prefWidth="91.0" text="Flag Car" />
       <Label layoutX="186.0" layoutY="14.0" text="Flag Vehicle">
          <font>
             <Font name="System Bold" size="24.0" />
          </font>
       </Label>
-      <Label layoutX="15.0" layoutY="144.0" text="Flagged Reason:" />
-      <Label layoutX="15.0" layoutY="68.0" text="Date:" />
-      <DatePicker layoutX="115.0" layoutY="63.0" prefHeight="26.0" prefWidth="202.0" />
+      <Label layoutX="15.0" layoutY="198.0" text="Flagged Reason:" />
+      <Label layoutX="15.0" layoutY="122.0" text="Date:" />
+      <DatePicker layoutX="115.0" layoutY="117.0" prefHeight="26.0" prefWidth="202.0" />
+      <Button layoutX="17.0" layoutY="19.0" mnemonicParsing="false" onAction="#backOA" text="Back" />
    </children>
 </AnchorPane>
