--- a/src/main/resources/cse_213/final_project/Tawhid/TrafficControlOfficer/G_8_VIPmovement.fxml
+++ b/src/main/resources/cse_213/final_project/Tawhid/TrafficControlOfficer/G_8_VIPmovement.fxml
@@ -16,5 +16,6 @@
       </Label>
       <Label layoutX="151.0" layoutY="109.0" text="Open Emergency lane:" />
       <Label layoutX="151.0" layoutY="143.0" text="Close Emergency lane:" />
+      <Button layoutX="24.0" layoutY="27.0" mnemonicParsing="false" onAction="#backOA" text="Back" />
    </children>
 </AnchorPane>
