--- a/src/main/resources/cse_213/final_project/Mehrab/Emergency Officer/Dispatch Maintenance Team.fxml
+++ b/src/main/resources/cse_213/final_project/Mehrab/Emergency Officer/Dispatch Maintenance Team.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="693.0" prefWidth="800.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/23.0.1" fx:controller="cse_213.final_project.Mehrab.DispatchMaintenanceTeamController">
+<AnchorPane prefHeight="693.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cse_213.final_project.Mehrab.DispatchMaintenanceTeamController">
 
     <Label layoutX="306.0" layoutY="23.0" text="Dispatch Maintenance Team" textAlignment="CENTER" textFill="#374d2c" wrapText="true">
       <font>
@@ -39,7 +39,7 @@
     <Label layoutX="410.0" layoutY="249.0" text="Expected Completion Date" />
     <DatePicker fx:id="completionDatePicker" layoutX="570.0" layoutY="245.0" prefWidth="200" />
 
-    <Button fx:id="dispatchButton" layoutX="267.0" layoutY="288.0" prefHeight="25.0" prefWidth="339.0" text="Dispatch Maintenance" />
+    <Button fx:id="dispatchButton" layoutX="267.0" layoutY="288.0" onAction="#dispatchButtonOA" prefHeight="25.0" prefWidth="339.0" text="Dispatch Maintenance" />
 
     <Label layoutX="49.0" layoutY="368.0" text="Maintenance Task Data" />
     <TableView fx:id="maintenanceTable" layoutX="49.0" layoutY="395.0" prefHeight="200" prefWidth="723.0">
@@ -55,4 +55,5 @@
 
     <Label fx:id="errorMessage" layoutX="30" layoutY="770" textFill="red" visible="false" />
     <Label fx:id="confirmationMessage" layoutX="30" layoutY="790" textFill="green" visible="false" />
+   <Button layoutX="267.0" layoutY="322.0" onAction="#viewTableOA" prefHeight="25.0" prefWidth="339.0" text="View Table" />
 </AnchorPane>
