--- a/src/main/resources/cse_213/final_project/Fima/Information_Support.fxml
+++ b/src/main/resources/cse_213/final_project/Fima/Information_Support.fxml
@@ -7,29 +7,26 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane prefHeight="501.0" prefWidth="709.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cse_213.final_project.Fima.Controllers.InformationSupport">
+<AnchorPane prefHeight="373.0" prefWidth="510.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cse_213.final_project.Fima.Controllers.InformationSupport">
    <children>
-      <Label layoutX="220.0" layoutY="14.0" text="Information and Support">
+      <Label layoutX="120.0" layoutY="14.0" text="Information and Support">
          <font>
             <Font name="System Bold" size="23.0" />
          </font>
       </Label>
-      <ComboBox layoutX="130.0" layoutY="62.0" prefWidth="150.0" />
+      <ComboBox fx:id="VehicleTypecombobox" layoutX="130.0" layoutY="62.0" prefWidth="150.0" />
       <Label layoutX="40.0" layoutY="66.0" text="Vehicle Type" />
-      <Label layoutX="40.0" layoutY="112.0" text="Wheel" />
-      <Label layoutX="44.0" layoutY="148.0" text="Taka" />
-      <ComboBox layoutX="129.0" layoutY="99.0" prefWidth="150.0" />
-      <TextField layoutX="131.0" layoutY="144.0" />
-      <TextField layoutX="131.0" layoutY="187.0" />
-      <Label layoutX="45.0" layoutY="191.0" text="VAT" />
-      <Button layoutX="330.0" layoutY="117.0" mnemonicParsing="false" text="Button" />
-      <Label layoutX="327.0" layoutY="66.0" text="Total Amount" />
-      <TextField layoutX="416.0" layoutY="62.0" />
-      <Button layoutX="406.0" layoutY="117.0" mnemonicParsing="false" text="Button" />
-      <Label layoutX="524.0" layoutY="100.0" prefHeight="60.0" prefWidth="102.0" text="Error1" />
-      <Label layoutX="524.0" layoutY="166.0" text="error2" />
-      <Button layoutX="520.0" layoutY="251.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="73.0" text="Submit" />
-      <Button layoutX="613.0" layoutY="442.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="74.0" text="Home" />
+      <Label layoutX="43.0" layoutY="112.0" text="Wheel" />
+      <Label layoutX="28.0" layoutY="210.0" text="Taka" />
+      <ComboBox fx:id="Wheelcombobox" layoutX="131.0" layoutY="108.0" prefWidth="150.0" />
+      <TextField fx:id="takatextfield" layoutX="131.0" layoutY="206.0" />
+      <TextField fx:id="vattextfield" layoutX="131.0" layoutY="288.0" />
+      <Label layoutX="32.0" layoutY="288.0" text="VAT" />
+      <Label layoutX="31.0" layoutY="248.0" text="Total Amount" />
+      <TextField fx:id="totalamounttextfield" layoutX="130.0" layoutY="244.0" />
+      <Label fx:id="showmassagelable1" layoutX="328.0" layoutY="58.0" prefHeight="60.0" prefWidth="102.0" style="-fx-border-color: red;" />
+      <Label fx:id="showmassagelable2" layoutX="329.0" layoutY="197.0" prefHeight="74.0" prefWidth="87.0" style="-fx-border-color: green;" />
+      <Button layoutX="154.0" layoutY="153.0" mnemonicParsing="false" onAction="#submitonactionbutton" prefHeight="26.0" prefWidth="102.0" text="Submit" />
+      <Button layoutX="355.0" layoutY="320.0" mnemonicParsing="false" onAction="#homeonactionbutton" prefHeight="26.0" prefWidth="122.0" text="Home" />
    </children>
 </AnchorPane>
