--- a/src/main/resources/cse_213/final_project/Fima/LiaisonOfficer/ StaffMeetings_BriefingsL5.fxml
+++ b/src/main/resources/cse_213/final_project/Fima/LiaisonOfficer/ StaffMeetings_BriefingsL5.fxml
@@ -1,14 +1,45 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="cse_213.final_project.Fima.LiaisonOfficer.StaffMeetingsBriefingsL5"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane prefHeight="560.0" prefWidth="680.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cse_213.final_project.Fima.LiaisonOfficer.StaffMeetingsBriefingsL5">
+   <children>
+      <ComboBox fx:id="MeetingTypecombobox" layoutX="144.0" layoutY="90.0" prefHeight="26.0" prefWidth="158.0" />
+      <Label layoutX="48.0" layoutY="95.0" text="Meeting Type" />
+      <Label layoutX="49.0" layoutY="132.0" text="meeting date" />
+      <Label layoutX="48.0" layoutY="171.0" text="Meeting Time" />
+      <Label layoutX="335.0" layoutY="132.0" text="Meeting Info" />
+      <DatePicker fx:id="meetingdatedatepicker" layoutX="143.0" layoutY="127.0" prefHeight="26.0" prefWidth="158.0" />
+      <TextField fx:id="MeetingTimetextfield" layoutX="144.0" layoutY="167.0" prefHeight="26.0" prefWidth="158.0" />
+      <Label layoutX="329.0" layoutY="94.0" text="Staff Attendees" />
+      <TextArea fx:id="MeetingInfotextarea" layoutX="324.0" layoutY="160.0" prefHeight="88.0" prefWidth="225.0" />
+      <RadioButton fx:id="StaffAttendeesyesradiobutton" layoutX="424.0" layoutY="95.0" mnemonicParsing="false" text="Yes" />
+      <RadioButton fx:id="StaffAttendeesnoradiobutton" layoutX="512.0" layoutY="95.0" mnemonicParsing="false" text="No" />
+      <TableView fx:id="showdatratableview" layoutX="13.0" layoutY="299.0" prefHeight="200.0" prefWidth="577.0">
+        <columns>
+          <TableColumn fx:id="MeetingTypetablecolumn" prefWidth="129.60003662109375" text="Meeting Type" />
+          <TableColumn fx:id="meetingdatetablecolumn" prefWidth="124.79998779296875" text="meeting date" />
+            <TableColumn fx:id="MeetingTimetablecolumn" prefWidth="94.39996337890625" text="Meeting Time" />
+            <TableColumn fx:id="MeetingInfotablecolumn" prefWidth="125.60003662109375" text="Meeting Info" />
+            <TableColumn fx:id="StaffAttendeestablecolumn" prefWidth="103.99993896484375" text="Staff Attendees" />
+        </columns>
+      </TableView>
+      <Button layoutX="66.0" layoutY="255.0" mnemonicParsing="false" onAction="#submitonactionbutton" prefHeight="26.0" prefWidth="148.0" text="Submit" />
+      <Button layoutX="570.0" layoutY="509.0" mnemonicParsing="false" onAction="#homeonactionbutton" prefHeight="26.0" prefWidth="96.0" text="Home" />
+      <Label layoutX="231.0" layoutY="21.0" text=" StaffMeetings_Briefings">
+         <font>
+            <Font name="System Bold" size="18.0" />
+         </font>
+      </Label>
+   </children>
 </AnchorPane>
